# scorpio_zadanie_rekrutacyjne_software

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/pkgconfig/: angular_velocity.pc  virtual_dc_motor.pc
devel/lib/virtual_dc_motor/: virtual_dc_motor_controller  virtual_dc_motor_driver
devel/share/angular_velocity/cmake/: angular_velocityConfig.cmake
devel/share/virtual_dc_motor/cmake/: virtual_dc_motorConfig.cmake
src/scorpio_package/: CMakeLists.txt
src/virtual_dc_motor/include/virtual_dc_motor_controller/: virtual_dc_motor_controller.hpp
src/virtual_dc_motor/include/virtual_dc_motor_driver/: virtual_dc_motor_driver.hpp
src/virtual_dc_motor/launch/: virtual_dc_motor.launch
src/virtual_dc_motor/src/: virtual_dc_motor_controller.cpp  virtual_dc_motor_driver.cpp
